Reworked dashboard item display to fix misaligned icons

--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,28 @@ body {
     align-items: start;
     color: white;
     z-index: 2;
+    padding-left: 1.8rem;
+    padding-right: 1.8rem;
+}
+
+.dash-item {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 20px
+}
+
+.dash-item > a {
+    text-decoration: none;
+    color: white;
+    font-size: .9rem;
+    font-weight: 600;
+}
+
+.dash-icon {
+    height: 1.2rem;
+    width: 1.2rem;
+    fill: white;
 }
 
 .logo,
@@ -47,25 +69,20 @@ body {
     position: relative;
 }
 
-.logo > p,
-.nav > a,
-.options > a {
-    margin-left: 40px;
-}
-
 .logo-icon {
-    position: absolute;
-    top: 1.50rem;
+    height: 1.5rem;
+    width: 1.5rem;
     fill: white;
 }
 
 .logo {
     font-family: LogoFont;
     font-size: 1.5rem;
+    padding-left: .2rem;
 }
 
-.logo > p {
-    margin-bottom: 0;
+.logo > .dash-item {
+    gap: .6rem;
 }
 
 .logo-icon,
@@ -81,27 +98,10 @@ body {
     height: 20px;
 }
 
-.icon {
-    position: absolute;
-    scale: 50%;
-    fill: white;
-}
-
 .logo,
 .nav,
 .options {
     gap: 12px;
-    padding: 20px;
-    padding-top: 0px;
-    padding-bottom: 0px;
-}
-
-.nav > a,
-.options > a {
-    text-decoration: none;
-    color: white;
-    font-size: .9rem;
-    font-weight: 600;
 }
 
 .main {
